introduced nightcoring in frontend

--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -30,7 +30,9 @@
     <span>Bass boost:<input type="range" id="bass" min="0" max="100" value="0"><span>0</span>dB</span>
   </div>
 
-  <audio controls></audio>
+  <button id="playButton">Start Context</button>
+
+  <audio controls src="faber.mp3"></audio>
 </body>
 
 </html>
