--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -26,13 +26,14 @@
 
   <div class="section">
     <h2>Effects</h2>
-    <span>Amplify:<input type="range" id="volume" min="0" max="100" value="0"><span>0</span>dB</span>
-    <span>Bass boost:<input type="range" id="bass" min="0" max="100" value="0"><span>0</span>dB</span>
+    <span>Amplify:<input type="range" id="amplify" min="0" max="100" value="0"><span>0</span>dB</span>
+    <span>Bass boost:<input type="range" id="bass" min="0" max="30" value="0"><span>0</span>dB</span>
   </div>
 
   <button id="playButton">Start Context</button>
+  <span>Volume:<input type="range" id="volume" min="0" max="1" value="0.2" step="0.01"><span>0</span>%</span>
 
-  <audio controls src="faber.mp3"></audio>
+  <audio src="faber.mp3"></audio>
 </body>
 
 </html>
