mini style changes

--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -20,8 +20,13 @@
 
   <div class="section">
     <h2>Input</h2>
-    <span>Enter a search query or YouTube URL:<input type="url" id="url" placeholder=""></span>
-    <span>Upload your own file:<input type="file" id="picker"></span>
+    <span>Enter a search query or YouTube URL:<input type="url" id="url"
+        placeholder="e.g. https://youtu.be/dQw4w9WgXcQ"></span>
+    <span>or
+      <label class="file-upload">
+        <input type="file" id="picker">Upload your own file
+      </label>
+    </span>
   </div>
 
   <div class="section">
