--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="scaffolded-by" content="https://github.com/dart-lang/stagehand">
   <title>nightcorify</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style/style.css">
   <link rel="icon" href="favicon.ico">
   <script defer src="main.dart.js"></script>
 </head>
@@ -35,8 +35,13 @@
     <span>Bass boost:<input type="range" id="bass" min="0" max="30" value="0"><span>0</span>dB</span>
   </div>
 
-  <button id="playButton">Start Context</button>
-  <span>Volume:<input type="range" id="volume" min="0" max="1" value="0.2" step="0.01"><span>0</span>%</span>
+  <div id="audioControls">
+    <button id="playButton"></button>
+    <span id="currentTime">0:00</span>
+    <input type="range" id="time" min="0" max="1" value="0.5" step="0.001">
+    <span id="duration">3:49</span>
+    <input type="range" id="volume" min="0" max="1" value="0.2" step="0.001">
+  </div>
 
   <audio src="faber.mp3"></audio>
 </body>
