--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -31,6 +31,7 @@
 
   <div class="section">
     <h2>Effects</h2>
+    <span>Playback Rate:<input type="range" id="rate" min="0.5" max="16" value="1" step="0.01"><span>1</span></span>
     <span>Amplify:<input type="range" id="amplify" min="0" max="100" value="0"><span>0</span>dB</span>
     <span>Bass boost:<input type="range" id="bass" min="0" max="30" value="0"><span>0</span>dB</span>
   </div>
