--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -20,7 +20,7 @@
 
   <div class="section">
     <h2>Input</h2>
-    <span>Enter a search query or YouTube URL:<input type="url" id="url"
+    <span>Enter a search query or YouTube URL:<input type="text" id="url"
         placeholder="e.g. https://youtu.be/dQw4w9WgXcQ"></span>
     <span>or
       <label class="file-upload">
