added number inputs after sliders

--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -30,9 +30,18 @@
 
   <div class="section">
     <h2>Effects</h2>
-    <span>Speed:<input type="range" id="rate" min="0.5" max="4" value="1" step="0.01"><span>1.00</span>x</span>
-    <span>Amplify:<input type="range" id="amplify" min="0" max="100" value="0"><span>0</span>dB</span>
-    <span>Bass boost:<input type="range" id="bass" min="0" max="30" value="0"><span>0</span>dB</span>
+    <span>
+      Speed:<input type="range" id="rate" min="0.5" max="4" value="1" step="0.01">
+      <input type="number">x
+    </span>
+    <span>
+      Amplify:<input type="range" id="amplify" min="0" max="100" value="0">
+      <input type="number">dB
+    </span>
+    <span>
+      Bass boost:<input type="range" id="bass" min="0" max="30" value="0">
+      <input type="number">dB
+    </span>
   </div>
 
   <div id="audioControls">
