--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -30,15 +30,15 @@
 
   <div class="section">
     <h2>Effects</h2>
-    <span>
+    <span class="effect">
       Speed:<input type="range" id="rate" min="0.5" max="4" value="1" step="0.01">
       <input type="number">x
     </span>
-    <span>
+    <span class="effect">
       Amplify:<input type="range" id="amplify" min="0" max="100" value="0">
       <input type="number">dB
     </span>
-    <span>
+    <span class="effect">
       Bass boost:<input type="range" id="bass" min="0" max="30" value="0">
       <input type="number">dB
     </span>
@@ -49,7 +49,7 @@
     <span id="currentTime">0:00</span>
     <input type="range" id="time" min="0" max="1" value="0.5" step="0.001">
     <span id="duration">0:00</span>
-    <input type="range" id="volume" min="0" max="1" value="0.2" step="0.0001">
+    <input type="range" id="volume" min="0" max="1" value="0.2" step="0.01">
   </div>
 
   <div class="single-section">
