auto-download exported file

--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -55,10 +55,8 @@
   <div class="single-section">
     <button id="export">Export</button>
     <span id="exportStatus"></span>
-    <audio id="exportResult" controls></audio>
+    <a id="download"></a>
   </div>
-
-  <audio id="input" src="faber.mp3"></audio>
 </body>
 
 </html>
