show file name above audio player

--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -44,6 +44,8 @@
     </span>
   </div>
 
+  <span id="fileName">No audio file loaded.</span>
+
   <div id="audioControls">
     <button id="playButton"></button>
     <span id="currentTime">0:00</span>
