added (server-side) mp3 conversion

--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -55,7 +55,8 @@
   </div>
 
   <div class="single-section">
-    <button id="export">Export</button>
+    <button id="exportWav">Render to WAV</button>
+    <button id="exportMp3">Render to MP3</button>
     <span id="exportStatus"></span>
     <a id="download"></a>
   </div>
