replaced clipper with lame limiter :/

--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -40,8 +40,13 @@
         <input type="number">dB
       </span>
       <span class="effect">
-        Bass boost:<input type="range" id="bass" min="0" max="30" value="0">
+        Bass Boost:<input type="range" id="bass" min="0" max="30" value="0">
         <input type="number">dB
+      </span>
+      <span class="effect">
+        Enable Limiter:
+        <span><input type="checkbox" id="useLimiter" checked>
+          <span class="info">Volume over 0dB will be clipped on export.</span></span>
       </span>
     </div>
 
